re PR middle-end/48367 (200.sixtrack/301.apsi in SPEC CPU 2000 are miscompiled)

2011-03-30  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/48367
	* ira-costs.c (find_costs_and_classes): Fix a typo in i_mem_cost
	calculation.

From-SVN: r171767